--- a/static/src/style.css
+++ b/static/src/style.css
@@ -3,22 +3,46 @@
 @tailwind components;
 @tailwind utilities;
 
-#app {
-    background-color: rgba(211, 232, 251, 0.523);
+:root {
+    --bg-t: #333639;
+    --bg-a: #fff;
+    --bg-bo: #424242;
+
+    --bg-app: #142d4385;
 }
 
-:root {
-    --bg-a: #e8f3fd;
-    --bg-b: #e66465;
+#app {
+    border-color: var(--bg-a);
+    background-color: var(--bg-app);
 }
+
+.v-md-editor,
+.v-md-textarea-editor>textarea,
+.v-md-editor__toolbar-item--active,
+.v-md-editor__toolbar-item--active:hover {
+    background-color: var(--bg-a) !important;
+}
+
+.v-md-pre-wrapper {
+    background-color: var(--bg-a) !important;
+    border: 1px solid;
+}
+
+.v-md-textarea-editor>textarea {
+    color: var(--bg-t) !important;
+}
+
 
 header {
-    background-image: linear-gradient(to right, var(--bg-a), var(--bg-b));
+    background-color: var(--bg-a);
+    backdrop-filter: blur(10px);
 }
-footer{
+
+footer {
     position: relative;
-    background-color: white;
+    background-color: var(--bg-a);
 }
+
 footer:before {
     content: ' ';
     background: url(assets/footer.png) no-repeat center;
